Strip Travis Code

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 compiler:
   - clang
   - gcc
-before-install:
-  - sudo apt-get install libsfml-dev
+#before-install:
+#  - sudo apt-get install libsfml-dev
 
 install: make main
