--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: cpp
 compiler:
   - clang
   - gcc
-#before-install:
-#  - sudo apt-get install libsfml-dev
+before-install:
+  - sudo apt-get install libsfml-dev
 
 script:
   - make
-  - ./main
+#  - ./main
