Update Ubuntu as suggested by GoodDeeds

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ os: "linux"
 compiler:
   - clang
   - gcc
+before_install:
+  - sudo apt-get update && sudo apt-get dist-upgrade
 install:
   - sudo apt-get install libsfml-dev
 
