Fix dist upgrade method

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
+dist: kylin
 language: cpp
 sudo: true
 os: "linux"
 compiler:
   - clang
   - gcc
-before_install:
-  - sudo apt-get update && sudo apt-get dist-upgrade
 install:
   - sudo apt-get install libsfml-dev
 
